# shenko

./: .bumpversion.cfg  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  IMPROVEMENTS.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  _version.py  input.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
shenko/: __init__.py  cli.py  shenko.py
shenko/01_HOME/: __init__.py
shenko/02_FILESYSTEM/: FILESYSTEM.py
shenko/06_OUTPUT/: OUTPUT.py  __init__.py
shenko/07_ROBOT_HOME/: ROBOT_HOME.py
shenko/08_NETWORK/: __init__.py
shenko/S00_CORE/: CORE.py
shenko/S01_HOME/: HOME.py  __init__.py
shenko/S02_FILESYSTEM/: FILESYSTEM.py  __init__.py
shenko/S03_TEMPORARY/: TEMPORARY.py  __init__.py
shenko/S04_INPUTS/: INPUTS.py  __init__.py
shenko/S05_CENTRAL/: CENTRAL.py  __init__.py
shenko/S06_OUTPUT/: OUTPUT.py  __init__.py
shenko/S07_ROBOT_HOME/: ROBOT_HOME.py  __init__.py
shenko/S08_NETWORK/: NETWORK.py  __init__.py
shenko/S09_EXTERNAL/: EXTERNAL.py  __init__.py
shenko/s00_init/: __init__.py  configurator.py  menu.py  platformer.py
shenko/utils/: __init__.py  assets.py  logger.py  ui.py
snap/: original_snapcraft.yaml  shenko_0.1.10_amd64.snap  shenko_0.1.7_amd64.snap  snapcraft.yaml
snap/gui/: shenko.desktop
snap/prime/meta/: snap.yaml
tests/: test_shenko.py
