[bumpversion]
current_version = 0.1.53
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:Dockerfile]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:_version.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:shenko/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:snap/snapcraft.yaml]
search = '{current_version}'
replace = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[metadata]
version = 0.1.2

[options]
packages = find:
package_dir = '{shenko',
	'shenko.S01_HOME',
	'shenko.S02_FILESYSTEM',
	'shenko.S03_TEMPORARY',
	'shenko.S04_INPUTS',
	'shenko.S05_CENTRAL',
	'shenko.S06_OUTPUT',
	'shenko.S07_ROBOT_HOME',
	'shenko.S08_NETWORK',
	'shenko.S09_EXTERNAL',
	}'

[options.packages.find]
where = shenko
include = S01_HOME
